--- a/HCI_Projekat2.csproj
+++ b/HCI_Projekat2.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -70,6 +73,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helper\EventsHelper.cs" />
+    <Compile Include="Helper\TagHelper.cs" />
+    <Compile Include="Helper\TypeHelper.cs" />
     <Compile Include="Models\SearchPredicate.cs" />
     <Compile Include="TagList.xaml.cs">
       <DependentUpon>TagList.xaml</DependentUpon>
@@ -157,6 +163,9 @@
   <ItemGroup>
     <Resource Include="delete.jpg" />
     <Resource Include="edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="delete.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
